scss/_base_typography-definitions.scss
@mixin vf-b-typography-definitions {
  //@section Heading styling in placeholders

  %vf-heading-1 {
    @include heading-max-width--short;
    font-size: pow($ms-ratio, 8) * 1rem;
    font-style: normal;
    font-weight: 100;
    line-height: map-get($line-heights, h1);
    margin-bottom: map-get($sp-after, h1) - map-get($nudges, nudge--h1);
    margin-top: -#{$sp-unit};
    padding-top: map-get($nudges, nudge--h1);

    @media (max-width: $breakpoint-heading-threshold) {
      font-size: pow($ms-ratio, 6) * 1rem;
      line-height: map-get($line-heights, h1-mobile);
      margin-bottom: map-get($sp-after, h1-mobile) - map-get($nudges, nudge--h1-mobile);
      padding-top: map-get($nudges, nudge--h1-mobile);
    }
  }

  %vf-heading-2 {
    @include heading-max-width--short;
    font-size: pow($ms-ratio, 6) * 1rem;
    font-style: normal;
    font-weight: 100;
    line-height: map-get($line-heights, h2);
    margin-bottom: map-get($sp-after, h2) - map-get($nudges, nudge--h2);
    margin-top: -#{$sp-unit};
    padding-top: map-get($nudges, nudge--h2);

    @media (max-width: $breakpoint-heading-threshold) {
      font-size: 1.83274rem; // pow($ms-ratio, 4.5) * 1rem
      line-height: map-get($line-heights, h2-mobile);
      margin-bottom: map-get($sp-after, h2-mobile) - map-get($nudges, nudge--h2-mobile);
      padding-top: map-get($nudges, nudge--h2-mobile);
    }
  }

  %vf-heading-3 {
    @include heading-max-width--long;
    font-size: pow($ms-ratio, 4) * 1rem;
    font-style: normal;
    font-weight: 300;
    line-height: map-get($line-heights, h3);
    margin-bottom: map-get($sp-after, h3) - map-get($nudges, nudge--h3);
    margin-top: -#{$sp-unit};
    padding-top: map-get($nudges, nudge--h3);

    @media (max-width: $breakpoint-heading-threshold) {
      font-size: pow($ms-ratio, 3) * 1rem;
      line-height: map-get($line-heights, h3-mobile);
      margin-bottom: map-get($sp-after, h3-mobile) - map-get($nudges, nudge--h3-mobile);
      padding-top: map-get($nudges, nudge--h3-mobile);
    }
  }

  %vf-heading-4 {
    @include heading-max-width--long;
    font-size: pow($ms-ratio, 2) * 1rem;
    font-style: normal;
    font-weight: 300;
    line-height: map-get($line-heights, h4);
    margin-bottom: map-get($sp-after, h4) - map-get($nudges, nudge--h4);
    margin-top: 0;
    padding-top: map-get($nudges, nudge--h4);

    @media (max-width: $breakpoint-heading-threshold) {
      font-size: 1.22176rem; // pow($ms-ratio, 1.5) * 1rem
      line-height: map-get($line-heights, h4-mobile);
      margin-bottom: map-get($sp-after, h4-mobile) - map-get($nudges, nudge--h4-mobile);
      padding-top: map-get($nudges, nudge--h4-mobile);
    }
  }

  %vf-heading-5 {
    @include p-max-width;
    font-size: 1em;
    font-style: normal;
    font-weight: 500;
    line-height: map-get($line-heights, default-text);
    margin-bottom: map-get($sp-after, p) - map-get($nudges, nudge--p);
    margin-top: 0;
    padding-top: map-get($nudges, nudge--p);
  }

  %vf-heading-6 {
    @include p-max-width;
    font-size: 1em;
    font-style: italic;
    font-weight: 300;
    line-height: map-get($line-heights, default-text);
    margin-bottom: map-get($sp-after, p) - map-get($nudges, nudge--p);
    margin-top: 0;
    padding-top: map-get($nudges, nudge--p);
  }

  %default-text {
    line-height: map-get($line-heights, default-text);
    margin-bottom: map-get($sp-after, default-text) - map-get($nudges, nudge--p);
    margin-top: 0;
    padding-top: map-get($nudges, nudge--p);
  }

  %paragraph {
    @extend %default-text;
    margin-bottom: map-get($sp-after, p) - map-get($nudges, nudge--p);
  }

  %small-text {
    font-size: pow($ms-ratio, -1) * 1rem;
    line-height: map-get($line-heights, small);
    margin-bottom: map-get($sp-after, small) - map-get($nudges, nudge--small);
    padding-top: map-get($nudges, nudge--small);
  }

  %muted-heading {
    @extend %small-text;
    color: $color-mid-dark;
    margin-bottom: map-get($sp-after, small) - map-get($nudges, nudge--small);
    margin-top: 0;
    text-transform: uppercase;
  }

  %bold {
    font-weight: 400;
  }

  // @section Adjustments to spacing between pairs of text elements e.g. p + h1
  // Placeholder naming: $sp + -- + {preceding element} + {following element}, e.g. for p + h1: $sp--ph1

  %sp--ph1 {
    padding-top: map-get($nudges, nudge--h1) + map-get($sp-before, h1);

    @media (max-width: $breakpoint-heading-threshold) {
      padding-top: map-get($nudges, nudge--h1-mobile) + map-get($sp-before, h1-mobile);
    }
  }

  %sp--ph2 {
    padding-top: map-get($nudges, nudge--h2) + map-get($sp-before, h2);

    @media (max-width: $breakpoint-heading-threshold) {
      padding-top: map-get($nudges, nudge--h2-mobile) + map-get($sp-before, h2-mobile);
    }
  }

  %sp--ph3 {
    padding-top: map-get($nudges, nudge--h3) + map-get($sp-before, h3);

    @media (max-width: $breakpoint-heading-threshold) {
      padding-top: map-get($nudges, nudge--h3-mobile) + map-get($sp-before, h3-mobile);
    }
  }

  %sp--ph4 {
    padding-top: map-get($nudges, nudge--h4) + map-get($sp-before, h4);
  }

  %sp--ph5 {
    padding-top: map-get($nudges, nudge--p) + map-get($sp-before, p);
  }

  %sp--pmuted {
    padding-top: map-get($nudges, nudge--small) + map-get($sp-before, muted);
  }

  // any heading followed by a paragraph
  %sp--hp {
    margin-top: $spv-p-after-heading-adjustment;
  }
}

